--- a/Customer/templates/feedback.html
+++ b/Customer/templates/feedback.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block navigation %}{% endblock %}
+
 {% block greeting %}
 <div class="row">
 	<div class="col-sm-6 col-sm-offset-3">
@@ -7,6 +9,7 @@
 	</div>
 </div>
 {% endblock %}
+
 
 {% block form %}
 
