--- a/Employees/templates/login.html
+++ b/Employees/templates/login.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<div>
-		<input type="submit" class="form-control" name="submit" value="Submit">
+		<input type="submit" class="form-control" name="submit" value="Submit" id="submit">
 	</div>
 
 	{% csrf_token %}
